--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html {
 }
 
 #hero-text {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.4);
     color: white;
     font-weight: bold;
     position: absolute;
@@ -30,12 +30,19 @@ html {
     text-align: center;
 }
 
+#hero-text h1 {
+    font-size: 80px;
+}
+
+#hero-text p {
+    font-size: 25px;
+}
+
 @media only screen and (max-width: 1024px) {
     #hero-text {
         background-color: rgba(0, 0, 0, 0.4);
         color: white;
         font-weight: bold;
-        border: 3px solid white;
         position: absolute;
         top: 50%;
         left: 50%;
