--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ html {
     font-size: 80px;
 }
 
-#hero-text p {
+#hero-text a {
     font-size: 25px;
 }
 
@@ -54,7 +54,7 @@ html {
     #hero-text h1 {
         font-size: clamp(16px, 10vw, 80px);
     }
-    #hero-text p {
+    #hero-text a {
         font-size: clamp(6px, 3vw, 25px);
     }
 }
