--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
     height: 100%;
     background-color: #253CA8;
     background-position: center;
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1)), url("/assets/background.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("/assets/background.png");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -32,10 +32,12 @@ html {
 
 #hero-text h1 {
     font-size: 80px;
+    color: white;
 }
 
 #hero-text a {
     font-size: 25px;
+    color: white;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -51,10 +53,14 @@ html {
         padding: 20px;
         text-align: center;
     }
+
     #hero-text h1 {
         font-size: clamp(16px, 10vw, 80px);
+        color: white;
     }
+
     #hero-text a {
         font-size: clamp(6px, 3vw, 25px);
+        color: white;
     }
 }
