--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ html {
 	text-align: center;
 	color: white;
 	opacity: 0.6;
-	transition: 0.25;
+	transition: 0.25s;
 }
 
 #hero-text a:hover {
@@ -71,7 +71,7 @@ html {
 		text-align: center;
 		color: white;
 		opacity: 0.6;
-		transition: 0.25;
+		transition: 0.25s;
 	}
 
 	#hero-text a:hover {
