--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body,
 html {
 	height: 100%;
 	margin: 0;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Source Code Pro', monospace;
 	scroll-behavior: smooth;
 }
 
