--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ html {
 }
 
 #hero-text a {
-	font-size: 40;
+	font-size: 35px;
 	text-align: center;
 	text-decoration: none;
 	color: white;
@@ -67,7 +67,7 @@ html {
 	}
 
 	#hero-text a {
-		font-size: clamp(12px, 3vw, 40);
+		font-size: clamp(8px, 3vw, 35px);
 		text-align: center;
 		text-decoration: none;
 		color: white;
